lab/02-deployment-basics/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-ctf-svc
  namespace: deployment-basics
  labels:
    app: simple-ctf
spec:
  type: ClusterIP
  selector:
    app: ctf-wrong
  ports:
    - name: http
      port: 3000
      targetPort: http
