lab/02-deployment-basics/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ctf-ingress
  namespace: deployment-basics
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /ctf(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: simple-ctf
                port:
                  number: 3000
